<resources>
    <string name="app_name">Our Movies App</string>
    <string name="title">Movies Title</string>
    <string name="releaseDate">releaseDate</string>
    <string name="genre">genre</string>
    <string name="rating">User Score</string>
    <string name="synopsis">Synopsis</string>

    <!--Data Dummy 11 Poster Film-->
    <string-array name="data_poster">
        <item>@drawable/poster_a_star</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_birdbox</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_marrypopins</item>
        <item>@drawable/poster_mortalengine</item>
        <item>@drawable/poster_robinhood</item>
        <item>@drawable/poster_spiderman</item>
        <item>@drawable/poster_venom</item>
    </string-array>

    <!--Data Dummy 11 Judul Film-->
    <string-array name="data_title">
        <item>A Star Is Born</item>
        <item>Aquaman</item>
        <item>Avengers: Infinity Wars</item>
        <item>Bohemian Rhapsody</item>
        <item>Bird Box</item>
        <item>Bumblebee</item>
        <item>Mary Poppins Return </item>
        <item>Mortal Engines</item>
        <item>Robin Hood</item>
        <item>Spider-Man Into The Spider-Verse</item>
        <item>Venom</item>
    </string-array>

    <!--Data Dummy 11 Tanggal Rilis Film-->
    <string-array name="data_releasedate">
        <item>October 5, 2018</item>
        <item>December 21, 2018</item>
        <item>April 27, 2018</item>
        <item>November 2, 2018</item>
        <item>November 12, 2018</item>
        <item>December 21, 2018</item>
        <item>December 19, 2018</item>
        <item>December 14, 2018</item>
        <item>November 21, 2018</item>
        <item>December 14, 2018</item>
        <item>October 5, 2018</item>
    </string-array>

    <!--Data Dummy Genre 11 Film-->
    <string-array name="data_genre">
        <item>Drama, Romance, Music</item>
        <item>Action, Adventure, Fantasy</item>
        <item>Adventure, Action, Fantasy</item>
        <item>Drama, Music</item>
        <item>Thriller, Drama</item>
        <item>Action, Adventure, Science Fiction</item>
        <item>Fantasy, Family, Comedy</item>
        <item>Adventure, Fantasy</item>
        <item>Adventure, Action, Thriller</item>
        <item>Action, Adventure, Animation, Science Fiction, Comedy</item>
        <item>Science Fiction, Action</item>
    </string-array>

    <!--Data Dummy Rating 11 Film-->
    <string-array name="data_rating">
        <item>75</item>
        <item>68</item>
        <item>83</item>
        <item>81</item>
        <item>70</item>
        <item>65</item>
        <item>66</item>
        <item>60</item>
        <item>58</item>
        <item>84</item>
        <item>66</item>
    </string-array>

    <!--Data Dummy Synopsis 11 Film-->
    <string-array name="data_synopsis">
        <item>Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Ally\'s career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm\'s half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970. Hit songs become instant classics. When Mercury\'s increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>In Depression-era London, a now-grown Jane and Michael Banks, along with Michael\'s three children, are visited by the enigmatic Mary Poppins following a personal loss. Through her unique magical skills, and with the aid of her friend Jack, she helps the family rediscover the joy and wonder missing in their lives.</item>
        <item>Many thousands of years in the future, Earth\’s cities roam the globe on huge wheels, devouring each other in a struggle for ever diminishing resources. On one of these massive traction cities, the old London, Tom Natsworthy has an unexpected encounter with a mysterious young woman from the wastelands who will change the course of his life forever.</item>
        <item>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown.</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
    </string-array>
</resources>
